--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="layout pure-g">
+        <div class="layout">
 
 
-            <header class="nav-menu pure-u-1 padding-1 dark">
+            <header class="nav-menu padding-1 dark">
                 <h1 class="no-mp">Get Engaged</h1>
                     
             </header>
@@ -50,15 +50,18 @@
 
 
 
-            <div class="content pure-u-1 pure-g no-mp">
+            <div class="content pure-g no-mp">
 
 
-                <div class="left-pane pure-u-3-5">
+                <div class="left-pane pure-u-1-2">
                     <div id="mapid"></div>
                 </div>
 
 
-                <div class="right-pane pure-u-2-5">
+                <div class="right-pane pure-u-1-2">
+
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScegN87odcR1mWqn6HZ4G8rgUBe3vaecURNhh1qbG8Y4iBNVw/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
                 </div>
             </div><!--content-->
 
