Rm google forms.

--- a/admin/index.html
+++ b/admin/index.html
@@ -16,9 +16,11 @@
         <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
 
+        <!--
          <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
          <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
          <script src="authy.js"></script>
+        -->
 
          <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.0/build/pure-min.css">
          <!--[if lte IE 8]>
@@ -27,6 +29,7 @@
         <!--[if gt IE 8]><!-->
             <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.0/build/grids-responsive-min.css">
         <!--<![endif]-->
+        <link rel="stylesheet" type="text/css" media="screen" href="http://formbuilder.online/assets/css/form-builder.min.css">
 
         <link rel="stylesheet" href="css/main.css">
 
@@ -69,6 +72,9 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+        <script src="http://formbuilder.online/assets/js/form-builder.min.js">
+        </script>
 
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
