--- a/index.html
+++ b/index.html
@@ -59,8 +59,23 @@
 
 
                 <div class="right-pane pure-u-1-2">
-
+                    <!--
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScegN87odcR1mWqn6HZ4G8rgUBe3vaecURNhh1qbG8Y4iBNVw/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                    -->
+
+                    <div class="form-render-wrap">        
+                        <form-template>
+                            <fields>
+                                <field type="radio-group" label="What's your opinion?" class="radio-group" name="radio-group-1481036827901">
+                                    <option label="Option 1" value="option-1" selected="true">Option 1</option>
+                                    <option label="Option 2" value="option-2">Option 2</option>
+                                    <option label="Option 3" value="option-3">Option 3</option>
+                                </field>
+                                <field type="paragraph" subtype="p" label="Give us your thoughts in prose." class="paragraph"></field>
+                                <field type="date" label="Date Field" class="calendar" name="date-1481036897283"></field>
+                            </fields>
+                        </form-template>
+                    </div>
 
                 </div>
             </div><!--content-->
